--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,10 @@ dependencies = [
     "pillow (>=11.2.1,<12.0.0)",
     "flake8 (>=7.2.0,<8.0.0)",
     "django-countries (>=7.6.1,<8.0.0)",
-    "django-phonenumber-field (>=8.1.0,<9.0.0)"
+    "django-phonenumber-field[phonenumbers] (>=8.1.0,<9.0.0)",
+    "phonenumbers (>=9.0.5,<10.0.0)",
+    "django-phone-field (>=1.8.1,<2.0.0)",
+    "redis (>=6.1.0,<7.0.0)"
 ]
 
 
