--- a/.env.sample
+++ b/.env.sample
@@ -4,6 +4,8 @@ DEBUG=
 
 
 
+TEST_DB=
+
 BD_NAME=
 
 BD_USER=
@@ -21,3 +23,21 @@ EMAIL_HOST_USER=
 EMAIL_HOST_PASSWORD=
 
 SERVER_REDIS=
+
+
+
+CSRF_TRUSTED_ORIGINS=
+
+CORS_ALLOWED_ORIGINS=
+
+CORS_ALLOW_ALL_ORIGINS=
+
+CORS_ALLOW_CREDENTIALS=
+
+
+
+DATABASE_URL=
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_HOST=
