--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,10 @@ dependencies = [
     "django-phonenumber-field[phonenumbers] (>=8.1.0,<9.0.0)",
     "phonenumbers (>=9.0.5,<10.0.0)",
     "django-phone-field (>=1.8.1,<2.0.0)",
-    "redis (>=6.1.0,<7.0.0)"
+    "redis (>=6.1.0,<7.0.0)",
+    "gunicorn (>=23.0.0,<24.0.0)",
+    "django-cors-headers (>=4.7.0,<5.0.0)",
+    "drf-yasg (>=1.21.10,<2.0.0)"
 ]
 
 
