--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,8 @@ dependencies = [
     "redis (>=6.1.0,<7.0.0)",
     "gunicorn (>=23.0.0,<24.0.0)",
     "django-cors-headers (>=4.7.0,<5.0.0)",
-    "drf-yasg (>=1.21.10,<2.0.0)"
+    "drf-yasg (>=1.21.10,<2.0.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)"
 ]
 
 
