deploy on server fix3

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,7 @@ jobs:
           cd ${{ secrets.DEPLOY_DIR }}
           sudo git init
           git pull https://github.com/KovkovDS/Personal_diary
+          git checkout develop
           sudo echo "${{ secrets.ENV_FILE }}" >> .env
           ls -la
           docker compose down || true
